@@ -1,0 +1,26 @@
+class java.lang.System
+class java.util.LinkedList
+class java.util.LinkedList
+class java.util.LinkedListthis is a string :)
+class java.util.LinkedListthis is a string :)
+class java.util.LinkedListthis is a string :)
+class java.lang.Character$Subsetanother string...
+class java.lang.Character$SubsetHEllo World
+class java.lang.Character$Subsetclass java.lang.Character$Subsetclass java.lang.Character$Subsetclass java.lang.Character$Subset
+Error: unable to resolve class: java.lang.Characte$Subset at line 0
+       ^java.lang.Characte$Subset
+
+public abstract int java.util.Map.hashCode()
+public abstract boolean java.util.Map.equals(java.lang.Object)
+public abstract java.lang.Object java.util.Map.get(java.lang.Object)
+public abstract java.lang.Object java.util.Map.put(java.lang.Object,java.lang.Object)
+public abstract void java.util.Map.clear()
+public abstract java.util.Collection java.util.Map.values()
+public abstract int java.util.Map.size()
+public abstract java.util.Set java.util.Map.entrySet()
+public abstract void java.util.Map.putAll(java.util.Map)
+public abstract java.lang.Object java.util.Map.remove(java.lang.Object)
+public abstract java.util.Set java.util.Map.keySet()
+public abstract boolean java.util.Map.isEmpty()
+public abstract boolean java.util.Map.containsValue(java.lang.Object)
+public abstract boolean java.util.Map.containsKey(java.lang.Object)
